# afi-sync

./: .gitignore  .gitmodules  AFISync.pro  AFISync.rc  CMakeLists.txt  Global.qml  LICENSE  README.md  deletabledetector.cpp  manifest.xml  qml.qrc  qmldir
app/: CMakeLists.txt  app.pro  manifest.xml
app/make-scripts/: makeDynamicDeps.bat  makeStatic.bat  makeStaticQt.bat
app/src/model/: afisync.cpp  afisync.h  afisynclogger.cpp  afisynclogger.h  cihash.h  console.cpp  console.h  constantsmodel.cpp  constantsmodel.h  deletable.cpp  deletable.h  deletabledetector.cpp  deletabledetector.h  destructionwaiter.cpp  destructionwaiter.h  fileutils.cpp  fileutils.h  global.cpp  global.h  installer.cpp  installer.h  jsonreader.cpp  jsonreader.h  jsonutils.cpp  jsonutils.h  main.cpp  mod.cpp  mod.h  modadapter.cpp  modadapter.h  pathfinder.cpp  pathfinder.h  paths.cpp  paths.h  pbocheckerprinterboost.cpp  pbocheckerprinterboost.h  processmonitor.cpp  processmonitor.h  qstreams.cpp  qstreams.h  (+21 more)
app/src/model/apis/: isync.h
app/src/model/apis/libtorrent/: ahasher.cpp  ahasher.h  alerthandler.cpp  alerthandler.h  deltadownloader.cpp  deltadownloader.h  deltamanager.cpp  deltamanager.h  deltapatcher.cpp  deltapatcher.h  directorywatcher.cpp  directorywatcher.cpp.TtKWIM  directorywatcher.h  libtorrentapi.cpp  libtorrentapi.h  speedcalculator.cpp  speedcalculator.h  storagemovemanager.cpp  storagemovemanager.h
app/src/model/crashhandler/: crashhandler.h
app/src/model/crashhandler/src/client/ios/: BreakpadController.h  BreakpadController.mm
app/src/model/crashhandler/src/client/ios/Breakpad.xcodeproj/: project.pbxproj
app/src/model/crashhandler/src/client/linux/dump_writer_common/: mapping_info.h
app/src/model/crashhandler/src/client/linux/handler/: exception_handler_unittest.cc  microdump_extra_info.h
app/src/model/crashhandler/src/client/linux/microdump_writer/: microdump_writer_unittest.cc
app/src/model/crashhandler/src/client/linux/minidump_writer/: linux_core_dumper.cc  linux_core_dumper_unittest.cc
app/src/model/crashhandler/src/client/mac/crash_generation/: ConfigFile.mm
app/src/model/crashhandler/src/client/mac/handler/: dynamic_images.cc  exception_handler.cc  mach_vm_compat.h  minidump_generator.cc
app/src/model/crashhandler/src/client/mac/sender/: uploader.h
app/src/model/crashhandler/src/client/mac/tests/: exception_handler_test.cc
app/src/model/crashhandler/src/client/windows/common/: auto_critical_section.h
app/src/model/crashhandler/src/client/windows/crash_generation/: client_info.cc  client_info.h  crash_generation_server.cc
app/src/model/crashhandler/src/client/windows/sender/: crash_report_sender.cc  crash_report_sender.h
app/src/model/crashhandler/src/client/windows/unittests/: testing.gyp  (+3 more)
app/src/model/crashhandler/src/common/: dwarf_cfi_to_module.h  dwarf_cu_to_module.cc  dwarf_cu_to_module_unittest.cc  language.cc  md5.cc  minidump_type_helper.h  module.h  module_unittest.cc  stabs_reader.h  unordered.h
app/src/model/crashhandler/src/common/android/: breakpad_getcontext.S  ucontext_constants.h
app/src/model/crashhandler/src/common/dwarf/: bytereader.cc  cfi_assembler.cc  cfi_assembler.h  dwarf2diehandler.h  dwarf2enums.h  dwarf2reader_die_unittest.cc  elf_reader.h
app/src/model/crashhandler/src/common/linux/: dump_symbols.h  elf_core_dump_unittest.cc  file_id_unittest.cc  google_crashdump_uploader.cc  google_crashdump_uploader.h  http_upload.cc  memory_mapped_file_unittest.cc
app/src/model/crashhandler/src/common/mac/: Breakpad.xcconfig  HTTPMultipartUpload.m  arch_utilities.cc  dump_syms.cc  dump_syms.h  file_id.cc  launch_reporter.cc  macho_reader_unittest.cc  macho_walker.cc
app/src/model/crashhandler/src/common/solaris/: guid_creator.cc
app/src/model/crashhandler/src/common/windows/: common_windows.gyp  http_upload.h  pdb_source_line_writer.cc
app/src/model/crashhandler/src/google_breakpad/common/: minidump_cpu_mips.h
app/src/model/crashhandler/src/google_breakpad/processor/: code_module.h  dump_object.h  exploitability.h  microdump.h  microdump_processor.h  minidump.h  proc_maps_linux.h  process_result.h  process_state.h
app/src/model/crashhandler/src/processor/: basic_code_module.h  basic_code_modules.cc  basic_code_modules.h  basic_source_line_resolver.cc  basic_source_line_resolver_types.h  basic_source_line_resolver_unittest.cc  call_stack.cc  cfi_frame_info.cc  cfi_frame_info.h  disassembler_x86_unittest.cc  dump_context.cc  dump_object.cc  exploitability_linux.h  exploitability_win.cc  logging.cc  map_serializers-inl.h  map_serializers_unittest.cc  microdump.cc  microdump_stackwalk_machine_readable_test  microdump_stackwalk_test  module_comparer.h  module_factory.h  range_map.h  range_map_shrink_down_unittest.cc  range_map_unittest.cc  simple_serializer-inl.h  source_line_resolver_base.cc  source_line_resolver_base_types.h  stack_frame_symbolizer.cc  stackwalk_common.cc  stackwalker_amd64.cc  stackwalker_amd64.h  stackwalker_arm.h  stackwalker_arm64.cc  stackwalker_arm64.h  stackwalker_arm64_unittest.cc  stackwalker_mips.cc  stackwalker_mips64_unittest.cc  stackwalker_unittest_utils.h  stackwalker_x86_unittest.cc  (+16 more)
app/src/model/crashhandler/src/processor/testdata/: linux_test_app.cc  microdump-arm64.dmp  microdump-multiple.dmp  minidump2.stackwalk.out
app/src/model/crashhandler/src/tools/: tools.gyp
app/src/model/crashhandler/src/tools/linux/: tools_linux.gypi
app/src/model/crashhandler/src/tools/mac/: tools_mac.gypi
app/src/model/crashhandler/src/tools/windows/: tools_windows.gyp
app/src/model/interfaces/: ibandwidthmeter.h  imod.h  irepository.h  isettings.h  isyncitem.h
app/src/view/: app.rc  asbannerbar.cpp  asbannerbar.h  asbannerbar.ui  assettingsview.cpp  assettingsview.h  assettingsview.ui  astreeitem.cpp  astreeitem.h  astreewidget.cpp  astreewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionalsetting.cpp  optionalsetting.h  pathsetting.cpp  pathsetting.h  pathsetting.ui  resources.qrc
tests/unittests/: CMakeLists.txt  afisynctest.cpp  deletabledetectortest.cpp  testconstants.h
(+855 files in other folders)
